# KinOpt

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  index.html  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: requirements.txt
docs/source/: conf.py  isoconversional_methods.rst  launch_GUI.rst  launch_data_extraction.rst  launch_isoconversional_analysis.rst  launch_optimization.rst  load_results.rst  modules.rst  optimization.rst  prerequisites.rst  usage.rst
kinopt/data/: data_kamal_heating_rate_10C_per_min.txt  data_kamal_heating_rate_15C_per_min.txt  data_kamal_heating_rate_20C_per_min.txt  data_kamal_heating_rate_5C_per_min.txt
kinopt/ressources/: Credits.html  ressources.qrc
kinopt/src/: data_extraction.py  interpolation.py  isoconversional_methods.py  kinetic_models.py  kinopt_interface.py  main.py  optimization.py
kinopt/tests/: test_interpolation.py  test_kinetic_models.py  test_optimization.py
ressources/: ressources_rc.py
src/: data_extraction.py  isoconversional_methods.py  kinopt_interface.py  kinopt_interface.ui  main.py
